add star average to Actor show page

--- a/app/views/actors/show.html.erb
+++ b/app/views/actors/show.html.erb
@@ -10,7 +10,7 @@
 
 <% all_stars = @actor.comments.map{|com| com.stars} %>
 <% avg = (all_stars.reduce(:+) / all_stars.count).round %>
-Average user star rating: <%= avg %>
+Average user rating: <%= render partial: "stars/stars", locals: { thing: avg } %>
 
 <!-- BEGIN USER COMMENTS ON ACTOR SECTION -->
 <div class="review">
