--- a/app/views/actors/show.html.erb
+++ b/app/views/actors/show.html.erb
@@ -1,13 +1,18 @@
-<p id="notice"><%= notice %></p>
+<div class="show-top-content">
 
-<p>
-  <strong>Name:</strong>
-  <%= @actor.name %>
-</p>
+  <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_actor_path(@actor) %> |
-<%= link_to 'Back', actors_path %>
+  <p>
+    <img src="<%= @actor.image_url %>"><br><br>
+    <strong>Name:</strong>
+    <%= @actor.name %>
+  </p>
 
+  <%= link_to 'Back to movie', url_for(:back) %> |
+  <%= link_to 'Edit', edit_actor_path(@actor) %> |
+  <%= link_to 'All actors', actors_path %>
+
+</div>
 
 
 <!-- BEGIN USER COMMENTS ON ACTOR SECTION -->
