--- a/app/views/stars/_stars.html.erb
+++ b/app/views/stars/_stars.html.erb
@@ -1,6 +1,6 @@
           <span id="stars">
                 <% if thing %>
-          Stars: <% if thing == 1 %>
+                 <% if thing == 1 %>
                     <i class="fa fa-star gold"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
                  <% elsif thing == 2 %>
                     <i class="fa fa-star gold"></i><i class="fa fa-star gold"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
