--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -43,23 +43,9 @@
       <br>
       <br>
 
-        <span id="stars">
-          Stars: <% if the_review.stars == 1 %>
-                    <i class="fa fa-star gold"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-                 <% elsif the_review.stars == 2 %>
-                    <i class="fa fa-star gold"></i><i class="fa fa-star gold"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-                 <% elsif the_review.stars == 3 %>
-                    <i class="fa fa-star gold"></i>
-                    <i class="fa fa-star gold"></i>
-                    <i class="fa fa-star gold"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                 <% elsif the_review.stars == 4 %>
-                    <i class="fa fa-star gold"></i><i class="fa fa-star gold"></i><i class="fa fa-star gold"></i><i class="fa fa-star gold"></i><i class="fa fa-star"></i>
-                 <% elsif the_review.stars == 5 %>
-                    <i class="fa fa-star gold"></i><i class="fa fa-star gold"></i><i class="fa fa-star gold"></i><i class="fa fa-star gold"></i><i class="fa fa-star gold"></i>
-                 <% end %>
-        </span>
+        <!-- average user rating -->
+        <%= @movie.reviews.first.reviewer.name %>'s professional star rating on this movie: <%= render partial: "stars/stars", locals: { thing: the_review.stars } %>
+
     <% else %>
       A pro review has yet to be written.
     <% end %>
