--- a/app/views/stars/_stars_average.html.erb
+++ b/app/views/stars/_stars_average.html.erb
@@ -1,5 +1,5 @@
 <% if commentable.comments.any? %>
   <% all_stars = commentable.comments.map{|com| com.stars} %>
   <% avg = (all_stars.reduce(:+) / all_stars.count).round %>
-  Average user rating: <%= render partial: "stars/stars", locals: { thing: avg } %>
+  <%= render partial: "stars/stars", locals: { thing: avg } %>
 <% end %>
