--- a/app/views/actors/show.html.erb
+++ b/app/views/actors/show.html.erb
@@ -12,9 +12,11 @@
   <%= link_to 'Edit', edit_actor_path(@actor) %> |
   <%= link_to 'All actors', actors_path %>
 
+  <br>
+  <br>
+  Average User Rating: &nbsp
+  <%= render partial: "stars/stars_average", locals: { commentable: @actor } %>
 </div>
-
-<%= render partial: "stars/stars_average", locals: { commentable: @actor } %>
 
 <!-- BEGIN USER COMMENTS ON ACTOR SECTION -->
 <div class="review">
