Update actors index page links

--- a/app/views/actors/index.html.erb
+++ b/app/views/actors/index.html.erb
@@ -27,7 +27,8 @@
 
   <br>
 
-  <%= link_to 'New Actor', new_actor_path %><br>
-  <%= link_to 'Back', new_actor_path %>
+  <%= link_to 'New Actor', new_actor_path %> |
+  <%= link_to 'Back', url_for(:back) %> |
+  <%= link_to 'All Movies', movies_path %>
 
 </div>
