--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,23 +50,24 @@
         <ul class="nav navbar-nav navbar-right">
           <!-- <li><a href="#about">About</a></li> -->
 
-          <% if current_user %>
-
+          <li><%= link_to "Movies", movies_path %></li>
+          <li><%= link_to "Actors", actors_path %></li>
+        <% if current_user %>
           <li>
             <%= link_to "Log out", logout_path, method: :delete %>
             <li ><a><span id="user">Welcome <%= current_user.username %></span></a></li>
-<!--         <form action="/sessions" method="get">
-          <input type="hidden" name="_method" value="DELETE">
-          <input type="submit" value="Log Out">
-        </form> -->
-      </li>
-      <% else %>
-      <li>
-        <a href="/sessions/new">Log In</a>
-      </li>
-      <% end %>
-    </ul>
-  </div>
+  <!--      <form action="/sessions" method="get">
+            <input type="hidden" name="_method" value="DELETE">
+            <input type="submit" value="Log Out">
+            </form> -->
+          </li>
+        <% else %>
+          <li>
+            <a href="/sessions/new">Log In</a>
+          </li>
+        <% end %>
+        </ul>
+      </div>
   <!-- /.navbar-collapse -->
 </div>
 <!-- /.container-fluid -->
