--- a/app/views/actors/index.html.erb
+++ b/app/views/actors/index.html.erb
@@ -15,11 +15,12 @@
     <tbody>
       <% @actors.each do |actor| %>
         <tr>
-          <td><%= actor.name %></td>
+          <td><%= link_to actor.name, actor %></td>
           <td><%= render partial: "stars/stars_average", locals: {commentable: actor} %></td>
-          <td><%= link_to 'Show', actor %></td>
-          <td><%= link_to 'Edit', edit_actor_path(actor) %></td>
-          <td><%= link_to 'Destroy', actor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% if is_admin? %>
+            <td><%= link_to 'Edit', edit_actor_path(actor) %></td>
+            <td><%= link_to 'Destroy', actor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% end %>
         </tr>
       <% end %>
     </tbody>
@@ -27,8 +28,10 @@
 
   <br>
 
-  <%= link_to 'New Actor', new_actor_path %> |
-  <%= link_to 'Back', url_for(:back) %> |
-  <%= link_to 'All Movies', movies_path %>
+  <div class="footer_links">
+    <%= link_to 'New Actor', new_actor_path %> |
+    <%= link_to 'Back', url_for(:back) %> |
+    <%= link_to 'All Movies', movies_path %>
+  </div>
 
 </div>
