--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -109,7 +109,7 @@
   <br>
 <% end %>
 
-<%if is_admin? || (authorized?(@movie, current_user) && @movie.reviews.any? && @movie.reviews.first.reviewer == current_user) %>
+<%if is_admin? || (authorized?(@movie, current_user)) %>
   <p>Reviewer features</p>
   <% if @movie.reviews.empty? %>
     <%= link_to "Review this Movie", new_movie_review_path(@movie.id) %>
