--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -51,6 +51,9 @@ body {
 
 .title-td {
   padding: 0 80px 0 0;
+  margin-top: 8%;
+  margin-top: 3%;
+
 }
 
 .index {
@@ -96,7 +99,7 @@ body {
 }
 
 .edit-delete a {
-  color: #777;
+  color: #F05F40;
   font-family: sans-serif;
 }
 
@@ -225,6 +228,10 @@ input[type="radio"]{
   /*background-image: url("http://cdn.backgroundhost.com/backgrounds/subtlepatterns/robots.png");*/
   /*background-color: #3c4242;*/
   background: linear-gradient(black, #191919);
+}
+
+.img-responsive {
+  margin-bottom: 5%;
 }
 
 
