make show image responsive

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,5 +1,5 @@
 <div class="show-top-content">
-    <img  class="movie-show-image" src="<%= @movie.image_url %>">
+    <img  class="img-responsive movie-show-image " src="<%= @movie.image_url %>">
     <h2><%= @movie.title %></h2>
     <h4><em><%= @movie.tagline %></em></h4>
     <h5>director | <%= @movie.director %></h5>
