--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,12 +50,13 @@
         <ul class="nav navbar-nav navbar-right">
           <!-- <li><a href="#about">About</a></li> -->
 
+          <li><%= link_to "Users", users_path if is_admin? %></li>
           <li><%= link_to "Movies", movies_path %></li>
           <li><%= link_to "Actors", actors_path %></li>
         <% if current_user %>
           <li>
             <%= link_to "Log out", logout_path, method: :delete %>
-            <li ><a><span id="user">Welcome <%= current_user.username %></span></a></li>
+            <li ><a><span id="user">Welcome <%= this_user.username %></span></a></li>
   <!--      <form action="/sessions" method="get">
             <input type="hidden" name="_method" value="DELETE">
             <input type="submit" value="Log Out">
