new scss file; require it in application.css; reference bckgd image the Rails way

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,5 +1,6 @@
 /*
  *= require_self
+ *= require css/background
  *= require css/bootstrap
  *= require css/bootstrap.min
  *= require css/creative
